src/test/resources/semantic/error/TS_ERROR_STRUCT_NO_DEFINIDO.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 7 | COLUMNA 11 | La estructura 'B' no se encuentra definida. |
struct A{

}

impl A{
    .(){}
    fn m1(B b,T a)->void{

    }
}
struct B{

}

impl B{
    .(){
        
    }
    fn m2(C b)->void{

    }
}

start{

}